all-apis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: poi
        image: registryrnr1073.azurecr.io/tripinsights/poi:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: trips
        image: registryrnr1073.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registryrnr1073.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: user-java
        image: registryrnr1073.azurecr.io/tripinsights/user-java:1.0
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api  
spec:
  ports:
  - port: 80
  selector:
    app: poi
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api  
spec:
  ports:
  - port: 80
  selector:
    app: trips
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api  
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api  
spec:
  ports:
  - port: 80
  selector:
    app: user-java
