challenge2-day2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-hacker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi-hacker1
  template:
    metadata:
      labels:
        app: poi-hacker1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: poi-hacker1
        image: openhackteam11.azurecr.io/poi-hacker1:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi-hacker1
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: poi-hacker1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-hacker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips-hacker1
  template:
    metadata:
      labels:
        app: trips-hacker1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: trips-hacker1
        image: openhackteam11.azurecr.io/trips-hacker1:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips-hacker1
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: trips-hacker1    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-hacker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile-hacker1
  template:
    metadata:
      labels:
        app: userprofile-hacker1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userprofile-hacker1
        image: openhackteam11.azurecr.io/userprofile-hacker1:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-hacker1
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: userprofile-hacker1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-hacker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java-hacker1
  template:
    metadata:
      labels:
        app: user-java-hacker1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: user-java-hacker1
        image: openhackteam11.azurecr.io/user-java-hacker1:v1
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-hacker1
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: user-java-hacker1
